--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-Testando o site do 1° Ano A 
+<header>ALURAFLIX</header>
 
 
-Este site é maneiro e radical !
-
-Compartilhe !!
+ <h1>ATRAVES DO ARANHAVERSO O PRIMEIRO FILME ?</h1>
+<p>#homem-aranha</p>
